deploy/manifests/tetris-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tetris-server
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tetris-server
  template:
    metadata:
      labels:
        app: tetris-server
    spec:
      containers:
        - name: tetris-server
          image: docker.io/aelred/tetris-server
          ports:
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
            - mountPath: "/root/.tetris/"
              name: tetris-storage
          readinessProbe:
            httpGet:
              port: 8000
              path: /scores
      volumes:
        - name: tetris-storage
          persistentVolumeClaim:
            claimName: tetris-server
---
apiVersion: v1
kind: Service
metadata:
  name: tetris-server
  namespace: default
spec:
  selector:
    app: tetris-server
  ports:
    - protocol: TCP
      port: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tetris-server
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: https://tetris.ael.red
spec:
  tls:
    - hosts:
        - api.tetris.ael.red
      secretName: tetris-server-tls
  rules:
    - host: api.tetris.ael.red
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: tetris-server
                port:
                  number: 8000
